Fix vertical spacing in css

--- a/source/modules/alert/alert.styl
+++ b/source/modules/alert/alert.styl
@@ -17,7 +17,7 @@ alert-style(background-color, font-color)
 
 .alert
 	position relative
-	margin-bottom $base-line-height
+	margin-bottom $base-vertical-spacing
 	padding 10px 15px
 	border-radius 2px
 
