--- a/source/styles/core/mixins/vhidden.styl
+++ b/source/styles/core/mixins/vhidden.styl
@@ -3,6 +3,8 @@ vhidden()
 	overflow hidden
 	clip rect(0, 0, 0, 0)
 	padding 0
+	border none
+	margin -1px
 	width 1px
 	height 1px
 	border none
