--- a/source/styles/core/typography/base.styl
+++ b/source/styles/core/typography/base.styl
@@ -6,7 +6,7 @@ body
 	background-color $base-bg-color
 	color $base-text-color
 	font-size $base-font-size
-	line-height $base-line-height
+	line-height $base-vertical-spacing
 	-webkit-font-smoothing antialiased
 	-moz-osx-font-smoothing grayscale
 
