--- a/source/styles/core/typography/blockquote.styl
+++ b/source/styles/core/typography/blockquote.styl
@@ -1,6 +1,6 @@
 blockquote
-	margin 0 0 $base-line-height
-	padding ($base-line-height / 2)
+	margin 0 0 $base-vertical-spacing
+	padding ($base-vertical-spacing / 2)
 	border-left 5px solid #eee
 
 	p
@@ -16,7 +16,7 @@ blockquote
 	small
 		display block
 		font-size 80%
-		line-height $base-line-height
+		line-height $base-vertical-spacing
 
 		&:before
 			content "\2014 \00A0" // - em dash, nbsp
