--- a/source/styles/core/typography/headings.styl
+++ b/source/styles/core/typography/headings.styl
@@ -4,7 +4,7 @@ h3
 h4
 h5
 h6
-	margin $base-line-height 0 0.5em
+	margin $base-vertical-spacing 0 0.5em
 	font-weight $heading-font-weight
 	font-family $heading-font-family
 	line-height normal
