--- a/source/styles/core/typography/lists.styl
+++ b/source/styles/core/typography/lists.styl
@@ -10,6 +10,6 @@ dt
 	font-weight bold
 
 dd
-	margin-bottom $base-line-height
+	margin-bottom $base-vertical-spacing
 	margin-left 0
-	padding-left $base-line-height
+	padding-left $base-vertical-spacing
