--- a/source/styles/core/typography/text.styl
+++ b/source/styles/core/typography/text.styl
@@ -1,6 +1,6 @@
 p
-	margin-top $base-line-height
-	margin-bottom $base-line-height
+	margin-top $base-vertical-spacing
+	margin-bottom $base-vertical-spacing
 
 	&:first-child
 		margin-top 0
